tests/baselines/reference/importCallExpressionNestedES20152.errors.txt
tests/cases/conformance/dynamicImport/index.ts(2,18): error TS1323: Dynamic import is only supported when '--module' flag is 'commonjs' or 'esNext'.
tests/cases/conformance/dynamicImport/index.ts(2,32): error TS1323: Dynamic import is only supported when '--module' flag is 'commonjs' or 'esNext'.


==== tests/cases/conformance/dynamicImport/foo.ts (0 errors) ====
    export default "./foo";
    
==== tests/cases/conformance/dynamicImport/index.ts (2 errors) ====
    async function foo() {
        return await import((await import("./foo")).default);
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1323: Dynamic import is only supported when '--module' flag is 'commonjs' or 'esNext'.
                                   ~~~~~~~~~~~~~~~
!!! error TS1323: Dynamic import is only supported when '--module' flag is 'commonjs' or 'esNext'.
    }